--- a/public/articles.css
+++ b/public/articles.css
@@ -3,10 +3,21 @@
 a {
   text-decoration: none;
 }
+
 a #redText {
-  color:rgb(255, 94, 126)
+  color: rgb(255, 94, 126)
 }
 
-.container article div p img {
-  height: 300px;
+@media screen and (max-device-width:960px) {
+  .container article div p img {
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
+@media screen and (min-width:961px) {
+  .container article div p img {
+    height: 300px;
+    object-fit: cover;
+  }
 }
